chore: only report main and merge queue to codecov
codecov doesn't allow filtering multiple branches, so this will let us
get a holistic view of the failures we care about

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -466,10 +466,11 @@ jobs:
 
       - name: "Upload Bats Tests results"
         uses: "codecov/test-results-action@v1"
-        if: ${{ !cancelled() }}
+        if: ${{ !cancelled() && (github.ref_name == 'main' || github.event_name != 'merge_group') }}
         with:
           disable_search: true
           files: "./report.xml"
           flags: "nix-integration-tests, ${{ matrix.test-tags }}, ${{ matrix.system }}"
           verbose: true
           use_oidc: true
+          override_branch: "main-or-merge-queue"
