chore: override_build_url for codecov
There's currently not link back to the GHA run. I'm not sure if this
will be visible anywhere, but it can't hurt to try.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -473,4 +473,5 @@ jobs:
           flags: "nix-integration-tests, ${{ matrix.test-tags }}, ${{ matrix.system }}"
           verbose: true
           use_oidc: true
+          override_build_url: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           override_branch: "main-or-merge-queue"
