--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -48,6 +48,7 @@ proptest = { workspace = true, optional = true }
 proptest-derive = { workspace = true, optional = true }
 http.workspace = true
 httpmock.workspace = true
+schemars = { workspace = true, features = ["chrono04"] }
 
 [dev-dependencies]
 anyhow.workspace = true
@@ -60,6 +61,7 @@ tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
 catalog-api-v1 = { workspace = true, features = ["tests"] }
 sentry = { workspace = true, features = ["test"] }
+
 
 [features]
 # allow exporting test helpers in dev mode only
