--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -56,6 +56,7 @@ url.workspace = true
 uuid.workspace = true
 xdg.workspace = true
 flox-core.workspace = true
+sapling-renderdag = "0.1.0"
 
 [dev-dependencies]
 pretty_assertions.workspace = true
