test: bump test data

--- a/test_data/unit_test_generated/error_from_publish_provider_when_publishing_package_not_yet_created.yaml
+++ b/test_data/unit_test_generated/error_from_publish_provider_when_publishing_package_not_yet_created.yaml
@@ -1,12 +1,12 @@
 when:
-  path: /api/v1/catalog/catalogs/test_user_with_existing_catalogs/packages/mypkg7/publish/info
+  path: /api/v1/catalog/catalogs/test1/packages/mypkg7/publish/info
   method: POST
   body: '{}'
 then:
   status: 200
   header:
   - name: date
-    value: Wed, 30 Jul 2025 02:17:47 GMT
+    value: Mon, 25 Aug 2025 16:16:03 GMT
   - name: server
     value: uvicorn
   - name: content-length
@@ -16,18 +16,18 @@ then:
   body: '{"ingress_uri":null,"ingress_auth":null,"catalog_store_config":{"store_type":"meta-only"}}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/test_user_with_existing_catalogs/packages/mypkg7/builds
+  path: /api/v1/catalog/catalogs/test1/packages/mypkg7/builds
   method: POST
-  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"mypkg7","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"mypkg7","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
+  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"mypkg7","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"pname":"mypkg7","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
 then:
   status: 404
   header:
   - name: date
-    value: Wed, 30 Jul 2025 02:17:47 GMT
+    value: Mon, 25 Aug 2025 16:16:03 GMT
   - name: server
     value: uvicorn
   - name: content-length
-    value: '99'
+    value: '72'
   - name: content-type
     value: application/json
-  body: '{"detail":"The package with name mypkg7 in catalog test_user_with_existing_catalogs was not found"}'
+  body: '{"detail":"The package with name mypkg7 in catalog test1 was not found"}'
