--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -194,7 +194,7 @@ jobs:
 
       - name: "Upload CLI Unit Test Results"
         uses: "codecov/test-results-action@v1"
-        if: ${{ !cancelled() && matrix.test-tags == '!activate,!containerize,!catalog' }}
+        if: ${{ !cancelled() && github.ref_name == 'main' && matrix.test-tags == '!activate,!containerize,!catalog' }}
         with:
           disable_search: true
           files: "./cli/target/nextest/ci/junit.xml"
@@ -223,7 +223,7 @@ jobs:
 
       - name: "Upload CLI Integration Test Results"
         uses: "codecov/test-results-action@v1"
-        if: ${{ !cancelled() }}
+        if: ${{ !cancelled() && github.ref_name == 'main' }}
         with:
           disable_search: true
           files: "./test-results/report.xml"
