--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -344,7 +344,7 @@ jobs:
       - "nix-build"
       - "nix-plugins-dev"
       - "cli-unit"
-      # TODO: enable these when deemed reliable - "nix-build-bats-tests"
+      - "nix-build-bats-tests"
 
     steps:
       - name: "Setup upterm session"
