refactor(ci): Depend on step rather than tags
Make it clearer why we only upload CodeCov results for unit tests in
some matrix runs by depending on the step outcome rather than the matrix
tags.

I went searching through history to understand why we had this
restriction as far back as using BuildKite before finding the comment a
few lines above.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,13 +188,14 @@ jobs:
       - name: "CLI Unit Tests"
         # Only run unit tests if when not running specialized integration tests
         if: ${{ matrix.test-tags == '!activate,!containerize,!catalog' }}
+        id: unit-tests
         env:
           RUST_BACKTRACE: 1
         run: nix develop -L --no-update-lock-file --command just impure-tests
 
       - name: "Upload CLI Unit Test Results"
         uses: "codecov/test-results-action@v1"
-        if: ${{ !cancelled() && matrix.test-tags == '!activate,!containerize,!catalog' }}
+        if: ${{ !cancelled() && steps.unit-tests.outcome != 'skipped' }}
         with:
           disable_search: true
           files: "./cli/target/nextest/ci/junit.xml"
