--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -30,3 +30,4 @@ indoc.workspace = true
 nix.workspace = true
 tempfile.workspace = true
 temp-env.workspace = true
+pretty_assertions.workspace = true
