--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -56,7 +56,7 @@ oauth2 = "4.4"
 once_cell = "1.21.3"
 path-dedot = "3.1.1"
 pollster = "0.3.0"
-progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
+progenitor-client = "0.11.1"
 proptest = "1.7.0"
 proptest-derive = "0.5.1"
 regex = "1.11"
@@ -113,7 +113,7 @@ signal-hook = "0.3.18"
 # build(.rs) dependencies
 openapiv3 = "2.2"
 prettyplease = "0.2"
-progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
+progenitor = "0.11.1"
 syn = "2.0"
 
 [profile.small]
