--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -57,6 +57,7 @@ uuid.workspace = true
 xdg.workspace = true
 flox-core.workspace = true
 sapling-renderdag = "0.1.0"
+minus = { version = "5.6.1", features = ["static_output", "search"] }
 
 [dev-dependencies]
 pretty_assertions.workspace = true
