chore: remove dependencies cargo-machete missed
Looks like cargo-machete doesn't remove unused workspace dependencies
from cli/Cargo.toml

I found unused dependencies with:
tomlq -r '.workspace.dependencies | keys[]' cli/Cargo.toml | xargs -I {} bash -c 'if ! rg -q "{}.workspace = true"; then echo {}; fi'

We weren't using schemars as a workspace dependency, so I changed that
to be consistent.

--- a/cli/flox-core/Cargo.toml
+++ b/cli/flox-core/Cargo.toml
@@ -22,7 +22,7 @@ tracing.workspace = true
 tempfile.workspace = true
 time.workspace = true
 thiserror.workspace = true
-schemars = "1"
+schemars.workspace = true
 
 
 [features]
