--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "flox-activations",
     "flox-core",
     "flox-test-utils",
+    "xtask",
 ]
 default-members = ["flox", "flox-watchdog", "flox-activations"]
 
