refactor: flox-activations calls activate

--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -16,8 +16,11 @@ env_logger = { version = "0.11.8", default-features = false }
 flox-core.workspace = true
 fslock.workspace = true
 log.workspace = true
+serde_json.workspace = true
+shell-escape.workspace = true
 time.workspace = true
 indoc.workspace = true
+itertools.workspace = true
 
 
 [dev-dependencies]
