--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.5.48", default-features = false, features = [
     "error-context",
     "derive",
 ] }
+dirs.workspace = true
 env_logger = { version = "0.11.8", default-features = false, features = ["color"] }
 flox-core.workspace = true
 fslock.workspace = true
