--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow.workspace = true
+backtrace = "0.3"
 clap = { version = "4.5.48", default-features = false, features = [
     "std",
     "usage",
