--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -23,6 +23,7 @@ shell-escape.workspace = true
 time.workspace = true
 indoc.workspace = true
 itertools.workspace = true
+tempfile.workspace = true
 
 
 [dev-dependencies]
