test: Add unit test to test alignment

--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -56,6 +56,7 @@ sapling-renderdag = "0.1.0"
 minus = { version = "5.6.1", features = ["static_output", "search"] }
 
 [dev-dependencies]
+catalog-api-v1.workspace = true
 pretty_assertions.workspace = true
 proptest.workspace = true
 proptest-derive.workspace = true
