feat: add `systemd` attribute to `ServiceDescriptor`
Allow passing custom systemd service configuration
to any flox defined service.
These values are intended to be used during the rendering of "persistent"
services.

The integration required a few changes and additions
to the proposed systemd crate:

1. `ServiceDescriptor` derives `Hash`, which requires all child strutures
   to implement `Hash` as well (following the std implementation).
   I am unsure _why_ `ServiceDescriptor` derives `Hash`,
   as it's only part of a `BTreeMap` (which does'nt require `Hash`),
   and there seems to be no further requirement
   for the `Hash` implementation.
   However, in the interest of not changing existing structures,
   this change derives `Hash` for all `systemd::*` types.
2. Manifests are (de/)serialized to/from toml and json.
   This requires `serde::{Serialize,Deserialize}` implemntations
   of the `systemd::*` types.
3. We generate json schemars for the manifest and lockfile
   using schemarsm, requiring the implementation of `JsonSchema`
   for `systemd::*` types using `derive(JsonSchema)`
4. We generate test data for property tests using `proptest`
   and `proptest_derive::Arbitrary`, which is included here
   as an **optional** dependency enabled in tests and when compiling
   with the (new) `"tests"` feature.
   N.B. compiling `flox-rust-sdk` with `features = "tests"`,
   also enables the feature for the `systemd` crate.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -82,6 +82,7 @@ sysinfo = "0.37.2"
 # provide system version information for metric
 # TODO: review if we need this
 sys-info = "0.9"
+systemd = { path = "systemd" }
 tempfile = "3.23.0"
 textwrap = { version = "0.16.2", features = ["terminal_size"] }
 thiserror = "2"
