--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -28,6 +28,7 @@ serde_yaml.workspace = true
 serde_with.workspace = true
 serde.workspace = true
 shell-escape.workspace = true
+systemd.workspace = true
 temp-env.workspace = true
 tempfile.workspace = true
 thiserror.workspace = true
@@ -53,6 +54,7 @@ httpmock.workspace = true
 pretty_assertions.workspace = true
 proptest.workspace = true
 proptest-derive.workspace = true
+systemd = { workspace = true, features = ["tests"] }
 tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
 catalog-api-v1 = { workspace = true, features = ["tests"] }
@@ -62,10 +64,11 @@ sentry = { workspace = true, features = ["test"] }
 [features]
 # allow exporting test helpers in dev mode only
 tests = [
-    "tracing-subscriber",
-    "proptest",
-    "proptest-derive",
-    "pretty_assertions",
+    "dep:tracing-subscriber",
+    "dep:proptest",
+    "dep:proptest-derive",
+    "dep:pretty_assertions",
+    "systemd/tests"
 ]
 extra-tests = ["impure-unit-tests"]
 impure-unit-tests = []
