chore: checkpoint before inviting claude to help

--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -19,9 +19,12 @@ flox-core.workspace = true
 fslock.workspace = true
 is_executable.workspace = true
 itertools.workspace = true
+libc.workspace = true
 log.workspace = true
+nix.workspace = true
 serde_json.workspace = true
 shell-escape.workspace = true
+signal-hook.workspace = true
 tempfile.workspace = true
 time.workspace = true
 indoc.workspace = true
