--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -50,6 +50,7 @@ indicatif = "0.18"
 is_executable = "1.0.5"
 itertools = "0.12.1"
 jsonwebtoken = "9.3"
+libc = "0.2.177"
 log = { version = "0.4.28", features = ["kv"] }
 nix = { version = "0.28", features = ["signal", "process", "user"] }
 oauth2 = "4.4"
