ci: format yaml fiels twith yamlfmt and treefmt
* adds yamlfmt to the devshell
* adds a config file to allow up to one empty line in yaml data for visual grouping
* replace the nixfmt hook with a treefmt hook that also formats yaml for us in CI
* adds treefmt, for easier excludes and to provide a target for the justfile and git hooks

--- a/treefmt.toml
+++ b/treefmt.toml
@@ -9,3 +9,14 @@ options = []
 includes = [ "*.nix" ]
 # Glob patterns of files to exclude
 excludes = []
+
+
+[formatter.yaml]
+# Formatter to run
+command = "yamlfmt"
+# Command-line arguments for the command
+options = []
+# Glob pattern of files to include
+includes = [ "*.yml", "*.yaml" ]
+# Glob patterns of files to exclude
+excludes = [ "test_data/**" ]
