ci: skip setting up nix for build job
Nix builds are run remotely through ssh,
thus we dont actually need a working nix installation
for the nix-build job.

This commit adds a flag to the common-setup to skip setting up nix,
and uses that to run `nix-build` without installing nix.

By way of skipping a nix installation, this also happens to save ~10s
off the setup's runtime.

--- a/.github/actions/common-setup/action.yml
+++ b/.github/actions/common-setup/action.yml
@@ -25,15 +25,20 @@ inputs:
   SYSTEM:
     required: false
     default: ""
+  SETUP_NIX:
+    required: false
+    default: "true"
 
 runs:
   using: "composite"
   steps:
     - name: "Install newer Nix"
+      if: ${{ inputs.SETUP_NIX }} == "true"
       uses: "cachix/install-nix-action@v31"
 
     - name: "Configure Nix"
       uses: "flox/configure-nix-action@main"
+      if: ${{ inputs.SETUP_NIX }} == "true"
       with:
         github-access-token: "${{ inputs.GITHUB_ACCESS_TOKEN }}"
         substituter: "${{ inputs.SUBSTITUTER }}"
@@ -44,6 +49,7 @@ runs:
         remote-builders: "${{ inputs.REMOTE_BUILDERS }}"
 
     - name: "Configure Nix"
+      if: ${{ inputs.SETUP_NIX }} == "true"
       shell: "bash"
       run: |
         sudo echo
