chore: format meson.build

--- a/nix-plugins/meson.build
+++ b/nix-plugins/meson.build
@@ -1,25 +1,24 @@
 project(
-    'flox-nix-plugins-root',
-    'cpp',
-    default_options: [
-        'cpp_std=c++2a',
-        'warning_level=2',
-        'debug=true',
-        'optimization=2',
-        'errorlogs=true',  # Please print logs for tests that fail
-    ],
-    meson_version: '>=1.1',
+  'flox-nix-plugins-root',
+  'cpp',
+  default_options: [
+    'cpp_std=c++2a',
+    'warning_level=2',
+    'debug=true',
+    'optimization=2',
+    'errorlogs=true', # Please print logs for tests that fail
+  ],
+  meson_version: '>=1.1',
 )
 
 gen_header = generator(
-    find_program('bash', native: true),
-    arguments: [
-        '-c',
-        '{ echo \'R"__NIX_STR(\' && cat @INPUT@ && echo \')__NIX_STR"\'; } > "$1"',
-        '_ignored_argv0',
-        '@OUTPUT@',
-    ],
-    output: '@PLAINNAME@.hh',
+  find_program('bash', native: true),
+  arguments: [
+    '-c', '{ echo \'R"__NIX_STR(\' && cat @INPUT@ && echo \')__NIX_STR"\'; } > "$1"',
+    '_ignored_argv0',
+    '@OUTPUT@',
+  ],
+  output: '@PLAINNAME@.hh',
 )
 
 nix_main_dep = dependency('nix-main', required: true)
@@ -30,12 +29,12 @@ nix_fetchers_dep = dependency('nix-fetchers', required: true)
 nix_flake_dep = dependency('nix-flake', required: true)
 
 dependencies = [
-    nix_main_dep,
-    nix_store_dep,
-    nix_expr_dep,
-    nix_cmd_dep,
-    nix_fetchers_dep,
-    nix_flake_dep,
+  nix_main_dep,
+  nix_store_dep,
+  nix_expr_dep,
+  nix_cmd_dep,
+  nix_fetchers_dep,
+  nix_flake_dep,
 ]
 
 # nix global constants such as `SYSTEM`
@@ -48,13 +47,13 @@ include_dirs = [include_directories('include')]
 lock_flake_installable_src = files('src/lock-flake-installable.cc')
 
 lock_flake_installable = library(
-    'lock-flake-installable',
-    lock_flake_installable_src,
-    dependencies: dependencies,
-    include_directories: include_dirs,
-    prelink: true,  # For C++ static initializers
-    install: true,
-    install_dir: 'lib/nix-plugins',
+  'lock-flake-installable',
+  lock_flake_installable_src,
+  dependencies: dependencies,
+  include_directories: include_dirs,
+  prelink: true, # For C++ static initializers
+  install: true,
+  install_dir: 'lib/nix-plugins',
 )
 
 # wrapped-nixpkgs-input-schema ==========================================
@@ -62,13 +61,13 @@ wrapped_nixpkgs_input_src = files('src/fetchers/wrapped-nixpkgs-input.cc')
 wrapped_nixpkgs_input_src += gen_header.process('src/fetchers/flake-v0.nix.in')
 
 wrapped_nixpkgs_input = library(
-    'wrapped-nixpkgs-input',
-    wrapped_nixpkgs_input_src,
-    dependencies: dependencies,
-    include_directories: include_dirs,
-    prelink: true,  # For C++ static initializers
-    install: true,
-    install_dir: 'lib/nix-plugins',
+  'wrapped-nixpkgs-input',
+  wrapped_nixpkgs_input_src,
+  dependencies: dependencies,
+  include_directories: include_dirs,
+  prelink: true, # For C++ static initializers
+  install: true,
+  install_dir: 'lib/nix-plugins',
 )
 
 # tests ================================================================
