build: bump c++ sta to c++23
Follows upstream: <https://github.com/NixOS/nix/pull/13793>

--- a/nix-plugins/meson.build
+++ b/nix-plugins/meson.build
@@ -2,7 +2,7 @@ project(
   'flox-nix-plugins-root',
   'cpp',
   default_options: [
-    'cpp_std=c++2a',
+    'cpp_std=c++23',
     'warning_level=2',
     'debug=true',
     'optimization=2',
