feat: format logs from flox-activations

--- a/cli/flox-activations/Cargo.toml
+++ b/cli/flox-activations/Cargo.toml
@@ -12,7 +12,7 @@ clap = { version = "4.5.51", default-features = false, features = [
     "error-context",
     "derive",
 ] }
-env_logger = { version = "0.11.8", default-features = false }
+env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
 flox-core.workspace = true
 fslock.workspace = true
 log.workspace = true
