--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -86,7 +86,7 @@ systemd = { path = "systemd" }
 tempfile = "3.23.0"
 textwrap = { version = "0.16.2", features = ["terminal_size"] }
 thiserror = "2"
-time = { version = "0.3", features = ["serde", "formatting"] }
+time = { version = "0.3", features = ["serde", "formatting", "local-offset"] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.9.8"
 toml_edit = { version = "0.23", features = ["serde"] }
