test: flake is not refreshed by default
Currently, nix' tarball-ttl prevents users from upgrading
flake based packages if the most recent upgrade happened within the ttl.

This test demonstrates that an existing tarball
(with description "original"), is reused despite a new tarball
(with description "updated") exists.

--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -54,6 +54,7 @@ httpmock.workspace = true
 pretty_assertions.workspace = true
 proptest.workspace = true
 proptest-derive.workspace = true
+tar.workspace = true
 tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
 catalog-api-v1 = { workspace = true, features = ["tests"] }
