--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -50,6 +50,7 @@ indexmap = { version = "2.12.0", features = ["serde"] }
 indoc = "2.0.7"
 inquire = "0.9.1"
 indicatif = "0.18"
+is_executable = "1.0.5"
 itertools = "0.14.0"
 jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
 log = { version = "0.4.28", features = ["kv"] }
