refactor: split out shell generation crate
This only moves existing functionality. It does not (intentionally)
modify behavior. This is a preparatory refactor for generating the
startup scripts for user shells.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,8 +8,9 @@ members = [
     "flox-core",
     "flox-test-utils",
     "mk_data",
+    "shell_gen",
     "systemd",
-    "xtask",
+    "xtask", 
 ]
 default-members = ["flox", "flox-watchdog", "flox-activations"]
 
