--- a/cli/flox-core/Cargo.toml
+++ b/cli/flox-core/Cargo.toml
@@ -18,6 +18,7 @@ proptest.workspace = true
 proptest-derive.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+shell_gen = { path = "../shell_gen" }
 tracing.workspace = true
 tempfile.workspace = true
 time.workspace = true
