--- a/cli/flox/Cargo.toml
+++ b/cli/flox/Cargo.toml
@@ -52,6 +52,7 @@ uuid.workspace = true
 xdg.workspace = true
 flox-core.workspace = true
 sapling-renderdag = "0.1.0"
+shell_gen = { path = "../shell_gen" }
 minus = { version = "5.6.1", features = ["static_output", "search"] }
 
 [dev-dependencies]
